# fall_detection

./: README.md  fall_cli.py  main_inference.py  pyproject.toml  requirements.txt  tcn_cli.py
cfg/: __init__.py
cfg/datasets/pose/: data.yaml
cfg/datasets/pose/labels/: train.cache  val.cache
cfg/datasets/pose/labels/test/: fall81_100.txt  fall81_125.txt  fall86_175.txt  fall86_200.txt  fall86_225.txt  fall86_250.txt  fall87_200.txt  fall87_225.txt  fall87_25.txt  fall87_250.txt  fall88_175.txt  fall88_200.txt  fall88_250.txt  fall89_200.txt  fall89_225.txt  fall89_250.txt  fall90_150.txt  fall90_175.txt  fall90_200.txt  fall91_250.txt  fall91_275.txt  fall91_300.txt  fall92_0.txt  fall92_175.txt  fall92_275.txt  fall92_300.txt  fall92_325.txt  fall93_300.txt  fall93_325.txt  fall93_350.txt  fall94_100.txt  fall94_125.txt  fall94_75.txt  fall95_275.txt  fall95_300.txt  fall96_150.txt  fall96_175.txt  fall96_200.txt  fall97_175.txt  fall97_200.txt  (+5 more)
cfg/datasets/pose/labels/train/: fall100_100.txt  fall100_150.txt  fall100_75.txt  fall101_175.txt  fall101_200.txt  fall101_225.txt  fall102_100.txt  fall102_125.txt  fall102_150.txt  fall103_0.txt  fall103_150.txt  fall103_175.txt  fall103_200.txt  fall103_225.txt  fall104_175.txt  fall104_250.txt  fall104_275.txt  fall105_200.txt  (+195 more)
cfg/models/tcn/: best_tcn.pt
fall_detection/: __init__.py
fall_detection/models/: tcn.py
fall_detection/scripts/: data_loader.py  evaluate.py  inference.py  prepare_training_data.py  train.py
pose_estimation/: __init__.py  yolo_v11_pose.py
utils/: frame_utils.py  video_utils.py
(+43 files in other folders)
