[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fall-detection-project"
version = "0.1.0"
description = "A project to detect human falls using Computer Vision."
authors = [
    {name = "Parichehr",email = "p.vahidinia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "ultralytics (>=8.3.59,<9.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "numpy (==1.26.4)",
    "scikit-learn (==1.6.1)",
    "tqdm (==4.67.1)"
]

[project.urls]
"Source" = "https://github.com/parichehrvn/fall_detection"

[project.scripts]
tcn = "cfg:tcn"
fall-detection = "cfg:fallDetection"
